ajout macarons et cannelés

--- a/index.html
+++ b/index.html
@@ -60,6 +60,29 @@
                 <p class="descriptionCard">Célébrez l'épiphanie avec notre Galette des Rois briochée parfumé à l'orange, citron, rhum et fleur d'oranger, une interprétation douce et moelleuse de la traditionnelle galette.</p>
                 <a href="galette.html" class="maj">VOIR TOUTES LES GALETTES</a>
             </div>
+
+            <div class="card">
+                <img src="photoPatisserie/Macarons/1.jpg" alt="image de macaron">
+                <p class="tCard">Macarons</p>
+                <p class="descriptionCard">Découvrez nos macarons d'exception, alliance subtile entre croquant et fondant. Leurs coques légères renferment un cœur généreux aux saveurs raffinées, mêlant tradition et audace.</p>
+                <a href="macarons.html" class="maj">VOIR TOUTES LES MACARONS</a>
+            </div>
+
+            <div class="card">
+                <img src="photoPatisserie/canneles/4.jpg" alt="image de cannelés">
+                <p class="tCard">Cannelés</p>
+                <p class="descriptionCard">Découvrez nos cannelés dorés. Leur croûte caramélisée cache un cœur tendre et parfumé, où la vanille et le rhum s’unissent avec élégance.</p>
+                <a href="canneles.html" class="maj">VOIR TOUTES LES CANNELES</a>
+            </div>
+
+            <!--
+            <div class="card">
+                <img src="photoPatisserie/Chocolats/2.jpg" alt="image de chocolats">
+                <p class="tCard">Ballotin de chocolats</p>
+                <p class="descriptionCard">Découvrez nos ballotins de chocolats assortis, un voyage sensoriel au cœur de la gourmandise. Chaque pièce, révèle un équilibre parfait entre finesse du cacao et richesse des arômes.</p>
+                <a href="chocolats.html" class="maj">VOIR TOUT LES CHOCOLATS</a>
+            </div>
+            -->
         </section>
 
         <p class="sousTitre">Événements</p>
