ajout des chocolats au site

--- a/chocolats.html
+++ b/chocolats.html
@@ -19,8 +19,12 @@
             </div>
             <div class="descProduit">
                 <p class="sousTitre">Chocolats</p>
-                <p class="desc">A mettre en fonction des boites</p>
-                <p>0.65€ l'unité</p>
+                <p class="desc">Deux type de ballotins disponibles : <br><br>
+                - Grand modèle : 24 chocolats - 10€<br> 
+                <b>4 chocolats de chaque parfum</b> : poire, bière, amarena, praliné, pistache, vanille <br><br>
+                - Petit modèle : 18 chocolats - 7.50€<br>
+                <b>3 chocolats de chaque parfum</b> : poire, bière, amarena, praliné, pistache, vanille
+                </p>
             </div>
         </div>
     </main>
