Fix bug ajout des chocolats

--- a/chocolats.html
+++ b/chocolats.html
@@ -19,7 +19,7 @@
             </div>
             <div class="descProduit">
                 <p class="sousTitre">Chocolats</p>
-                <p class="desc">Deux type de ballotins disponibles : <br><br>
+                <p class="desc">Deux types de ballotins disponibles : <br><br>
                 - Grand modèle : 24 chocolats - 10€<br> 
                 <b>4 chocolats de chaque parfum</b> : poire, bière, amarena, praliné, pistache, vanille <br><br>
                 - Petit modèle : 18 chocolats - 7.50€<br>
