--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="card">
                 <img src="photoPatisserie/Chocolats/2.jpg" alt="image de chocolats">
                 <p class="tCard">Ballotin de chocolats</p>
-                <p class="descriptionCard">Découvrez nos ballotins de chocolats assortis, un voyage sensoriel au cœur de la gourmandise. Chaque pièce, révèle un équilibre parfait entre finesse du cacao et richesse des arômes.</p>
+                <p class="descriptionCard">Découvrez nos ballotins de chocolats assortis. Il y a différents parfums disponibles : poire, bière, amarena, praliné, pistache, vanille. tous aussi délicieux les uns que les autres.</p>
                 <a href="chocolats.html" class="maj">VOIR TOUT LES CHOCOLATS</a>
             </div>
         </section>
