--- a/buche.html
+++ b/buche.html
@@ -17,10 +17,7 @@
             <div class="descProduit">
                 <p class="sousTitre">Buche de noel</p>
                 <p class="desc">Même composition que les gateaux mais sous forme de bûche.</p>
-                <p>6 parts : 8.40 € / 8 parts : 11.20 €</p>
-                <p>10 parts : 14 € / 12 parts : 16.80 €</p>
-                <p>20 parts : 28.30 € / 30 parts : 42 €</p>
-                <p>40 parts : 56 €</p>
+                <p>6 parts : 8.40 € <br> 8 parts : 11.20 € <br> 10 parts : 14 €</p>
             </div>
         </div>
 
